--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 /* geral */
-*{
+* {
     padding: 0;
     margin: 0;
     font-family: 'Ubuntu', sans-serif;
 }
 
-body{
+body {
     background: linear-gradient(180deg, #594cee 0%, #8dd0f5 100%);
     display: flex;
     justify-content: center;
@@ -13,36 +13,86 @@ body{
     height: 100vh;
 }
 
-.hide{
+.hide {
     display: none
 }
 
-.container{
+.container {
     background-color: #5c54ed;
-    box-shadow: 0px 3px 8px #0000003b;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     padding: 2rem;
     color: #fdfdfd;
     border-radius: 1rem;
+    max-width: 400px;
 }
 
-.form h3{
-    display:flex
+.form h3 {
+    margin-bottom: 1rem;
 }
-.form input{
+
+.form-input-container {
+    display: flex;
+}
+
+.form input {
     padding: 0.8rem;
     border: none;
     flex: 1;
     border-radius: 4px;
 }
 
-.form button{
+.form button {
     padding: 0.8rem;
     min-width: 50px;
     margin-left: 8px;
     background-color: #8dd0f5;
     color: #fff;
-    border:none;
+    border: none;
     cursor: pointer;
     border-radius: 4px;
 }
 
+/* climate */
+#weather-data {
+    border-top: 1px solid #fff;
+    margin-top: 1.5rem;
+    padding-top: 1.5rem;
+    text-align: center;
+}
+
+#weather-data h2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 0.6rem;
+}
+
+#weather-data h2 i{
+    font-size: 1rem;
+}
+#weather-data span{
+    margin: .6rem;
+}
+
+#country{
+    height: 40px
+}
+
+#description-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: .6rem 0;
+}
+
+#details-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#details-container #umidity{
+    border-right: 1px solid #fff;
+    margin: .6rem;
+    padding: .6rem;
+}
