--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    overflow: hidden;
 }
 
 .hide {
@@ -67,18 +68,19 @@ body {
     margin-bottom: 0.6rem;
 }
 
-#weather-data h2 i{
+#weather-data h2 i {
     font-size: 1rem;
 }
-#weather-data span{
+
+#weather-data span {
     margin: .6rem;
 }
 
-#country{
+#country {
     height: 40px
 }
 
-#description-container{
+#description-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -90,18 +92,42 @@ body {
     text-transform: capitalize;
 }
 
-#details-container{
+#details-container {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-#details-container #humidity{
+#details-container #humidity {
     border-right: 1px solid #fff;
     margin: .6rem;
     padding: .6rem;
 }
 
-#error-message{
+#error-message {
     margin-top: 12px;
+}
+
+#suggestions {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+#suggestions button {
+    min-width: 150px;
+    margin: 0.8rem;
+    padding: 0.6rem 0.9rem;
+    border-radius: 10rem;
+    border: none;
+    background-color: #000000;
+    color: #fff;
+    cursor: pointer;
+    font-weight: bold;
+    opacity: 0.8;
+    transition: 0.4s;
+}
+
+#suggestions button:hover {
+    opacity: 1;
 }
